<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/frame_5">


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideGauche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.28" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideCentre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.72" />

    <com.sae402.poissonglobe.PoissonGlaceTextView
        android:id="@+id/btnStats"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="300dp"
        android:background="@drawable/bouton_arrondi_bordure"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/cherry_bomb"
        android:gravity="center"
        android:text="@string/voir_tous_les_joueurs"
        android:textColor="#FFD700"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnRegles"
        app:layout_constraintEnd_toStartOf="@id/guideGauche"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.sae402.poissonglobe.PoissonGlaceTextView
        android:id="@+id/btnRegles"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/bouton_arrondi_bordure"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/cherry_bomb"
        android:gravity="center"
        android:text="@string/regles_du_jeu"
        android:textColor="#FFD700"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideGauche"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStats" />


    <com.sae402.poissonglobe.PoissonGlaceTextView
        android:id="@+id/txtTitre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cherry_bomb"
        android:text="@string/titre_poisson_glace"
        android:textColor="#FFD700"
        android:textSize="110sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/txtSelection"
        app:layout_constraintEnd_toStartOf="@id/guideCentre"
        app:layout_constraintStart_toEndOf="@id/guideGauche"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.sae402.poissonglobe.PoissonGlaceTextView
        android:id="@+id/txtSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/cherry_bomb"
        android:gravity="center"
        android:text="@string/s_lectionnez_le_nombre_de_joueurs"
        android:textColor="#FFD700"
        android:textSize="55sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnJoueurs2"
        app:layout_constraintEnd_toStartOf="@id/guideCentre"
        app:layout_constraintStart_toEndOf="@id/guideGauche"
        app:layout_constraintTop_toBottomOf="@id/txtTitre" />

    <com.sae402.poissonglobe.PoissonGlaceTextView
        android:id="@+id/btnJoueurs2"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/bouton_rond_bordure"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/cherry_bomb"
        android:gravity="center"
        android:text="@string/_2"
        android:textColor="#FFD700"
        android:textSize="85sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnJoueurs4"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/guideGauche"
        app:layout_constraintTop_toBottomOf="@id/txtSelection" />

    <com.sae402.poissonglobe.PoissonGlaceTextView
        android:id="@+id/btnJoueurs4"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bouton_rond_bordure"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/cherry_bomb"
        android:gravity="center"
        android:text="@string/_4"
        android:textColor="#FFD700"
        android:textSize="85sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/btnJoueurs2"
        app:layout_constraintEnd_toStartOf="@id/guideCentre"
        app:layout_constraintTop_toBottomOf="@id/txtSelection"
        app:layout_constraintBottom_toBottomOf="parent" />

    <FrameLayout
        android:id="@+id/zoneClassement"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bouton_arrondi_bordure"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:padding="20dp"
        app:layout_constraintStart_toEndOf="@id/guideCentre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>