<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/frame_5"
    android:clipChildren="false">

    <com.sae402.poissonglobe.PoissonGlaceTextView
        android:id="@+id/titreRegles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/cherry_bomb"
        android:paddingHorizontal="20dp"
        android:text="@string/regles_du_jeu"
        android:textColor="#FFD700"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/panneauRegles"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bouton_arrondi_bordure"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titreRegles"
        app:layout_constraintVertical_bias="0.142">

        <com.sae402.poissonglobe.PoissonGlaceTextView
            android:id="@+id/txtContenuRegles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/cherry_bomb"
            android:gravity="center_vertical"
            android:padding="24dp"
            android:paddingHorizontal="5dp"
            android:text="@string/regles"
            android:textColor="#FFFFFF"
            android:textSize="34sp" />

    </FrameLayout>

    <com.sae402.poissonglobe.PoissonGlaceTextView
        android:id="@+id/btnRetourDetails"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bouton_arrondi_bordure"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/cherry_bomb"
        android:gravity="center"
        android:text="@string/retour"
        android:textColor="#FFD700"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>